[package]
name = "retro-ps-wasm"
version = "0.1.0"
edition.workspace = true
description = "WebAssembly wrapper around the retro-ps backends"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
retro-ps-c2089a = { path = "../retro-ps-c2089a" }
wasm-bindgen = "0.2"
js-sys = "0.3"

# Smaller wasm. The c2089a backend is ~1500 LoC of CPU-step inner
# loop; LTO + opt-z makes it ~350 KB instead of ~700 KB.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]
